@@ -2035,6 +2035,8 @@ packRegsForHLUse (iCode * ic)
   if (ic->next != uic)
     return;
 
+  if (ic->op == CAST && uic->op == IPUSH)
+    goto hluse;
   if (ic->op == ADDRESS_OF && uic->op == IPUSH)
     goto hluse;
   if (ic->op == CALL && ic->parmBytes == 0 && (uic->op == '-' || uic->op == '+'))
